--- a/index.html
+++ b/index.html
@@ -18,17 +18,32 @@
                     <a href="#">Home</a>
                  </li> 
                  <li> 
-                    <a href="#">Sobre</a>
+                    <a href="#">About me</a>
                  </li> 
                  <li> 
-                    <a href="#">Serviços</a>
+                    <a href="#">Services</a>
                  </li> 
                  <li> 
-                    <a href="#">Projetos</a>
+                    <a href="#">Projects</a>
                  </li> 
                  <button class="custom-btn btn-3"><span>CONTATE-ME</span></button>
             </div>
-        </header>
-    </div><!--Background-->
+        </header> 
+
+        <div class="container-text">
+            <div class="text">
+            <h3>Hello. I'm</h3> 
+            <h1>Danilo dos Santos Tolini Martins</h1>  
+            <p>Computer Science student</p>
+            <div class="redes-sociais"> 
+                <a href="https://www.linkedin.com/in/danilo-dos-santos-tolini-martins/"><i class="fa-brands fa-linkedin"></i></a> 
+                <a href="https://github.com/Danilotolini"><i class="fa-brands fa-github"></i></a>
+            </div><!--REDES SOCIAIS-->   
+            <div class="btn-sobremim">
+            <button class="custom-btn btn-3"><span>Sobre mim</span></button>
+        </div>
+    </div> 
+    </div>
+    </div><!--Background--> 
 </body>
-</html>
+</html> 
