--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Danilo dos Santos Tolini Martins</title>
+    <link rel="stylesheet" href="style.css"> 
+     <!-- Adicionando o favicon -->
+     <link rel="icon" href="https://i.ibb.co/tc5VC7g/azul.png" type="image/png">
+     <!-- Para compatibilidade com mais navegadores -->
+     <link rel="icon" href="https://i.ibb.co/tc5VC7g/azul.png" type="image/x-icon">
+     <!-- Para dispositivos Apple -->
+     <link rel="apple-touch-icon" href="https://i.ibb.co/tc5VC7g/azul.png">
+    <title>Portfólio Danilo dos Santos Tolini Martins</title>
 </head>
 <body>
     <div class="background">
