--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="style.css"> 
-     <!-- Adicionando o favicon -->
-     <link rel="icon" href="https://i.ibb.co/tc5VC7g/azul.png" type="image/png">
-     <!-- Para compatibilidade com mais navegadores -->
-     <link rel="icon" href="https://i.ibb.co/tc5VC7g/azul.png" type="image/x-icon">
-     <!-- Para dispositivos Apple -->
-     <link rel="apple-touch-icon" href="https://i.ibb.co/tc5VC7g/azul.png">
+    <!-- Adicionando o favicon -->
+    <link rel="icon" href="https://i.ibb.co/tc5VC7g/azul.png" type="image/png">
+    <!-- Para compatibilidade com mais navegadores -->
+    <link rel="icon" href="https://i.ibb.co/tc5VC7g/azul.png" type="image/x-icon">
+    <!-- Para dispositivos Apple -->
+    <link rel="apple-touch-icon" href="https://i.ibb.co/tc5VC7g/azul.png">
     <title>Portfólio Danilo dos Santos Tolini Martins</title>
 </head>
 <body>
@@ -25,16 +25,22 @@
                 <li><a href="#about-me">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#Skills">Skills</a></li>
-                <a href="https://api.whatsapp.com/send/?phone=5511967884852&text&type=phone_number&app_absent=0">
-                    <button class="custom-btn btn-3"><span>CONTACT ME</span></button></a>
+                <a href="https://api.whatsapp.com/send/?phone=5511967884852&text=Olá,%20Danilo!%20Gostaria%20de%20falar%20com%20você.&type=phone_number&app_absent=0">
+                    <button class="custom-btn btn-3"><span>CONTACT ME</span></button>
+                </a>
             </div>
-            <div class="menu-mobile">
-                <div class="bars"><i class="fa-solid fa-bars"></i>
+            <div class="header">
+                <div class="menu-mobile">
+                    <div class="bars"><i class="fa-solid fa-bars"></i></div>
+                    <div class="close-button"><i class="fa-solid fa-times"></i></div>
                     <div class="btn-menu">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about-me">About me</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#Skills">Skills</a></li>
+                        <ul>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#about-me">About me</a></li>
+                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="https://api.whatsapp.com/send/?phone=5511967884852&text&type=phone_number&app_absent=0">Contact me</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -56,37 +62,38 @@
             </div>
         </div>
     </div>
+
     <div id="about-me">
-    <div class="about-container" >
-        <div  class="section-about">
-            <h2>About Me</h2>
-            <p>Hello, my name is Danilo. I am a Computer Science student at São Judas Tadeu University and currently pursuing a Java Programming course at Impacta College. Additionally, I am studying English at Cultura Inglesa to enhance my global communication skills.</p>
-            <p>I have a strong interest and passion for software development. I am always eager to learn new skills and apply them to practical projects. My goal is to contribute to technological advancements by offering creative and efficient solutions. I am seeking opportunities to expand my knowledge and be part of collaborative teams.</p>
+        <div class="about-container">
+            <div class="section-about">
+                <h2>About Me</h2>
+                <p>Hello, my name is Danilo. I am a Computer Science student at São Judas Tadeu University and currently pursuing a Java Programming course at Impacta College. Additionally, I am studying English at Cultura Inglesa to enhance my global communication skills.</p>
+                <p>I have a strong interest and passion for software development. I am always eager to learn new skills and apply them to practical projects. My goal is to contribute to technological advancements by offering creative and efficient solutions. I am seeking opportunities to expand my knowledge and be part of collaborative teams.</p>
+            </div>
+            <div class="image-container">
+                <img src="https://i.ibb.co/cNNW3GS/Whats-App-Image-2024-06-14-at-17-00-41-15af8005.jpg" alt="Foto de Danilo">
+            </div>
         </div>
-        <div class="image-container">
-        <img src="https://i.ibb.co/cNNW3GS/Whats-App-Image-2024-06-14-at-17-00-41-15af8005.jpg" alt="Whats-App-Image-2024-06-14-at-17-00-41-15af8005" border="0">
-        </div>
-    </div></div>
+    </div>
 
     <div class="projects-container" id="projects">
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-item">
-                <img class="project-image" src="https://i.ibb.co/JcK3j2t/hotel2.png" alt="Descrição da Imagem">
+                <img class="project-image" src="https://i.ibb.co/JcK3j2t/hotel2.png" alt="Hotel Santos Beachfront">
                 <div class="project-title">Hotel Santos Beachfront</div>
                 <p class="project-description">"Hotel Santos Beachfront" is a dynamic website built with HTML, CSS, and JavaScript, designed for a fictional hotel. It features user login functionality, detailed room and amenities information, leisure options, and a contact form for reservations and inquiries.</p>
                 <a class="project-link" href="https://github.com/Danilotolini/Hotel-Santos-Beachfront">GitHub Repository</a>
             </div>
-            <!-- Outros projetos aqui --> 
             <div class="project-item">
-                <img class="project-image" src="https://i.ibb.co/jWC1tZZ/calculadora.png" alt="Projeto 2">
+                <img class="project-image" src="https://i.ibb.co/jWC1tZZ/calculadora.png" alt="Calculadora">
                 <h3 class="project-title">Calculadora</h3>
                 <p class="project-description">This project showcases a simple calculator built using HTML, CSS, and JavaScript. The design is functional and responsive, ensuring a consistent user experience across different devices.</p>
                 <a class="project-link" href="https://github.com/Danilotolini/Calculadora.git">GitHub Repository</a>
             </div>
         </div> 
     </div> 
-    
+
     <div class="skills-container" id="Skills">
         <h2>Skills</h2>
         <div class="skills-grid">
@@ -130,9 +137,9 @@
                 <i class="fab fa-react"></i>
                 <p>React</p>
             </div>
-            </div>
         </div>
     </div> 
+
     <div class="footer">
         <div class="footer-content">
             <p>&copy; 2024 Danilo dos Santos Tolini Martins. Todos os direitos reservados.</p>
@@ -142,7 +149,6 @@
             </div>
         </div>
     </div>
-    
 
     <script src="script.js"></script>
 </body>
