--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 <body>
     <div class="background">
         <header>
-            <div class="logo"> 
-                <span class="logo-icon"><i class="fas fa-code"></i></span>
-                <span class="logo-text">Danilo</span>
-            </div>
-            <div class="cabecalho-link">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about-me">About me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#Skills">Skills</a></li>
-                <a href="https://api.whatsapp.com/send/?phone=5511967884852&text=Olá,%20Danilo!%20Gostaria%20de%20falar%20com%20você.&type=phone_number&app_absent=0">
+                <div class="logo">
+                    <span class="logo-icon"><i class="fas fa-code"></i></span>
+                    <span class="logo-text">Danilo</span>
+                </div>
+                <ul class="cabecalho-link">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#Skills">Skills</a></li>
+                    <li><a href="https://api.whatsapp.com/send/?phone=5511967884852&text=Olá,%20Danilo!%20Gostaria%20de%20falar%20com%20você.&type=phone_number&app_absent=0">
                     <button class="custom-btn btn-3"><span>CONTACT ME</span></button>
-                </a>
-            </div>
+                    </a></li>
+                </ul>
+           
+            
             <div class="header">
                 <div class="menu-mobile">
                     <div class="bars"><i class="fa-solid fa-bars"></i></div>
@@ -38,7 +40,7 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about-me">About me</a></li>
                             <li><a href="#projects">Projects</a></li>
-                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="#Skills">Skills</a></li>
                             <li><a href="https://api.whatsapp.com/send/?phone=5511967884852&text&type=phone_number&app_absent=0">Contact me</a></li>
                         </ul>
                     </div>
