--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
                 <div class="project-title">Hotel Santos Beachfront</div>
                 <p class="project-description">"Hotel Santos Beachfront" is a dynamic website built with HTML, CSS, and JavaScript, designed for a fictional hotel. It features user login functionality, detailed room and amenities information, leisure options, and a contact form for reservations and inquiries.</p>
                 <a class="project-link" href="https://github.com/Danilotolini/Hotel-Santos-Beachfront">GitHub Repository</a>
+            </div> 
+            <div class="project-item">
+                <img class="project-image" src="https://i.ibb.co/TmDNLrV/Tela-imagem.png" alt="Tela-imagem" border="0">
+                <h3 class="project-title">Cadastro de Alunos</h3>
+                <p class="project-description">
+                    I developed an application for student registration, which allows you to insert, sort, display and remove students from a list in a practical and intuitive way. The graphical interface was built with Swing, providing a user-friendly experience.</p>
+                <a class="project-link" href="https://github.com/Danilotolini/Calculadora.git">GitHub Repository</a>
             </div>
             <div class="project-item">
                 <img class="project-image" src="https://i.ibb.co/jWC1tZZ/calculadora.png" alt="Calculadora">
