--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
                             <!-- Links em italiano -->
                             <li class="menu-item" data-lang="it" style="display:none;">
-                                <a href="#home">Home</a>
+                                <a href="#home">Casa</a>
                             </li>
                             <li class="menu-item" data-lang="it" style="display:none;">
                                 <a href="#about-me">Chi sono</a>
